--- a/index.html
+++ b/index.html
@@ -62,6 +62,62 @@
       <div class="card">
         <a href="./detalhePedido.html">
           <div class="row">
+            <div class="textos col-8">
+              <h3 class="titulo">Picanha</h3>
+              <p class="descricao">Acompanha arroz e batata frita.</p>
+              <p class="valor">R$ 59,99</p>
+            </div>
+            <div class="imagem col-4">
+              <img src="./assets/Imagem Prato.png" alt="Prato" class="prato">
+            </div>
+          </div>
+        </a>
+      </div>
+      <div class="card">
+        <a href="./detalhePedido.html">
+          <div class="row">
+            <div class="textos col-8">
+              <h3 class="titulo">Picanha</h3>
+              <p class="descricao">Acompanha arroz e batata frita.</p>
+              <p class="valor">R$ 59,99</p>
+            </div>
+            <div class="imagem col-4">
+              <img src="./assets/Imagem Prato.png" alt="Prato" class="prato">
+            </div>
+          </div>
+        </a>
+      </div>
+      <div class="card">
+        <a href="./detalhePedido.html">
+          <div class="row">
+            <div class="textos col-8">
+              <h3 class="titulo">Picanha</h3>
+              <p class="descricao">Acompanha arroz e batata frita.</p>
+              <p class="valor">R$ 59,99</p>
+            </div>
+            <div class="imagem col-4">
+              <img src="./assets/Imagem Prato.png" alt="Prato" class="prato">
+            </div>
+          </div>
+        </a>
+      </div>
+      <div class="card">
+        <a href="./detalhePedido.html">
+          <div class="row">
+            <div class="textos col-8">
+              <h3 class="titulo">Picanha</h3>
+              <p class="descricao">Acompanha arroz e batata frita.</p>
+              <p class="valor">R$ 59,99</p>
+            </div>
+            <div class="imagem col-4">
+              <img src="./assets/Imagem Prato.png" alt="Prato" class="prato">
+            </div>
+          </div>
+        </a>
+      </div>
+      <div class="card">
+        <a href="./detalhePedido.html">
+          <div class="row">
           <div class="textos col-8">
             <h3 class="titulo">Picanha</h3>
             <p class="descricao">Acompanha arroz e batata frita.</p>
