Tela Login/Registrar

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <!-- Navegação -->
     <div id="cima">
       <div class="navegacao">
-        <a href="login.html">
+        <a href="./view/login.html">
           <img src="./assets/login.png" alt="Login/Cadastro" class="login">
         </a>
         <a href="index.html">
@@ -46,7 +46,7 @@
         Carnes
       </h2>
       <div class="card">
-        <a href="./detalhePedido.html">
+        <a href="./view/detalhePedido.html">
           <div class="row">
             <div class="textos col-8">
               <h3 class="titulo">Picanha</h3>
@@ -60,7 +60,7 @@
         </a>
       </div>
       <div class="card">
-        <a href="./detalhePedido.html">
+        <a href="./view/detalhePedido.html">
           <div class="row">
             <div class="textos col-8">
               <h3 class="titulo">Picanha</h3>
@@ -74,7 +74,7 @@
         </a>
       </div>
       <div class="card">
-        <a href="./detalhePedido.html">
+        <a href="./view/detalhePedido.html">
           <div class="row">
             <div class="textos col-8">
               <h3 class="titulo">Picanha</h3>
@@ -88,7 +88,7 @@
         </a>
       </div>
       <div class="card">
-        <a href="./detalhePedido.html">
+        <a href="./view/detalhePedido.html">
           <div class="row">
             <div class="textos col-8">
               <h3 class="titulo">Picanha</h3>
@@ -102,7 +102,7 @@
         </a>
       </div>
       <div class="card">
-        <a href="./detalhePedido.html">
+        <a href="./view/detalhePedido.html">
           <div class="row">
             <div class="textos col-8">
               <h3 class="titulo">Picanha</h3>
@@ -116,7 +116,7 @@
         </a>
       </div>
       <div class="card">
-        <a href="./detalhePedido.html">
+        <a href="./view/detalhePedido.html">
           <div class="row">
           <div class="textos col-8">
             <h3 class="titulo">Picanha</h3>
@@ -134,7 +134,7 @@
   <!-- /cardápio -->
   <!-- carrinho -->
   <div id="carrinho">
-    <a href="./carrinho.html">
+    <a href="./view/carrinho.html">
     <div class="row">
       <h2 class="titulo col-7">Meu carrinho</h2>
       <h2 class="preco col-5">R$ 0,00</h2>
