--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
   <!-- Navegação -->
     <div id="cima">
       <div class="navegacao">
+        <a href="./view/perfilCli.html">
+          <img src="./assets/perfil.png" alt="perfil" class="perfil" id="perfil">
+        </a>
         <a href="./view/login.html">
           <img src="./assets/login.png" alt="Login/Cadastro" class="login">
         </a>
